// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MyAwesomeApp > should match snapshot - screen 1`] = `
<div
  data-testid="div-app"
>
  <h1
    data-testid="first-name-title"
  >
     
    Carlos
     
  </h1>
  <h3>
     
    Espino Maraví
     
  </h3>
  <p>
    4
  </p>
  <p
    class="mi-clase-favorita"
  >
    Elder Ring, Smash, Metal Gear
  </p>
  <h1>
    Activo
  </h1>
  <p
    style="background-color: rgb(240, 240, 240); border-radius: 10px; padding: 10px; margin-top: 20px;"
  >
    {"zipCode":"ABC-123","country":"Canadá"}
  </p>
</div>
`;

exports[`MyAwesomeApp > should match snapshot 1`] = `
<div>
  <div
    data-testid="div-app"
  >
    <h1
      data-testid="first-name-title"
    >
       
      Carlos
       
    </h1>
    <h3>
       
      Espino Maraví
       
    </h3>
    <p>
      4
    </p>
    <p
      class="mi-clase-favorita"
    >
      Elder Ring, Smash, Metal Gear
    </p>
    <h1>
      Activo
    </h1>
    <p
      style="background-color: rgb(240, 240, 240); border-radius: 10px; padding: 10px; margin-top: 20px;"
    >
      {"zipCode":"ABC-123","country":"Canadá"}
    </p>
  </div>
</div>
`;
